# storyofdubai

./: .env.example  .gitignore  2026-04-21-114322-this-session-is-being-continued-from-a-previous-c.txt  2026-04-21-161137-this-session-is-being-continued-from-a-previous-c.txt  B1_DESIGN_EXAMPLES.md  B1_DESIGN_SYSTEM_ANALYSIS.md  B1_DESIGN_SYSTEM_README.md  B1_IMPLEMENTATION_GUIDE.md  CLAUDE.md  ENRICHMENT_COMPLETE.md  PHASE_3A_COMPLETE.txt  PHASE_3A_IMPLEMENTATION_SUMMARY.md  PHASE_3A_SCRAPER_GUIDE.md  PHASE_3A_VERIFICATION.md  PROGRESS.md  QUICKSTART_PHASE3A.md  QUICK_REFERENCE.txt  README.md  RUN_LOCALLY_STEP_BY_STEP.md  SETUP_COMPLETE.txt  START_HERE_PHASE_3A.md  YOUR_NEXT_ACTION.txt  docker-compose.dev.yml
.claude/: settings.json
.claude/agents/: INDEX.md  code-reviewer.md  security-auditor.md
.claude/commands/: INDEX.md  deploy.md  fix-issue.md  generate-pages.md  review.md  scraper-run.md  security-audit.md
.claude/knowledge/: data-pipeline.md  deployment.md  page-templates.md  scrapers.md  seo-strategy.md  session-recovery.md
.claude/rules/: api-conventions.md  architecture.md  codestyle.md  database.md  security.md  testing.md
.github/workflows/: deploy-frontend.yml
backend/: .dockerignore  2026-04-20-134828-this-session-is-being-continued-from-a-previous-c.txt  Dockerfile  alembic.ini  debug_bayut.py  inspect_bayut.py  pyproject.toml  requirements.txt  run_bayut_scraper.py  run_enrichment.py  run_property_seed.py  run_scraper_demo.py  run_visa_seed.py  test_scraper_structure.py  verify_enrichment.py  verify_schema.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_all_tables.py  072a5b02f46f_fix_venue_slug_unique_constraint.py  38398359edae_add_display_order_to_categories.py  419d42fa0252_add_missing_columns_to_visa_nationality_.py  76414fec9ddc_add_missing_columns_to_developers_and_.py  7750362af4a3_fix_properties_name_column.py  785744028804_add_category_to_visa_types.py  a61fe9578246_add_missing_columns_to_areas.py  e856349cb9e9_add_missing_columns_to_visa_types.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/ai_enrichment/: __init__.py  enricher.py  prompts.py
backend/app/api/v1/: __init__.py  areas.py  categories.py  nationalities.py  page_paths.py  properties.py  sectors.py  venues.py  visa_guides.py
backend/app/models/: __init__.py  base.py  company.py  property.py  scrape_job.py  venue.py  visa.py
backend/app/pipeline/: __init__.py  tasks.py
backend/app/schemas/: base.py  company.py  page_paths.py  property.py  venue.py  visa.py
backend/app/scoring/: base.py  venue_scorer.py
backend/app/scrapers/: __init__.py  base.py  bayut.py  db_writer.py  google_places_demo.py  property_seeder.py  visa_seeder.py
backend/app/services/: cache.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_bayut_scraper.py  test_scoring.py
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/components/: AffiliateCTA.tsx  BreadcrumbNav.tsx  EmailCapture.tsx  Layout.tsx  ScoreBadge.tsx  VenueCard.tsx
frontend/pages/: index.tsx  sitemap.xml.tsx
frontend/pages/[category]/: index.tsx
frontend/pages/[category]/[area]/: [venue].tsx  index.tsx
frontend/pages/apartments/: index.tsx
frontend/pages/apartments/[area]/: index.tsx
frontend/pages/apartments/[area]/[bedrooms]/: [price].tsx
frontend/pages/apartments/[area]/[bedrooms]/[price]/: [slug].tsx
frontend/pages/companies/: index.tsx
frontend/pages/visa-guide/: index.tsx
frontend/pages/visa-guide/[nationality]/: [type].tsx  index.tsx
frontend/public/: robots.txt
frontend/styles/: globals.css
