[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storyofdubai-backend"
version = "0.1.0"
description = "Story of Dubai — Programmatic SEO Backend"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

# ═══════════════════════════════════════════════════════════════════════════
# PYTEST — Testing Framework
# ═══════════════════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
  --strict-markers
  --tb=short
  -v
"""
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "scraper: Scraper tests",
    "slow: Slow tests",
]

[tool.pytest.env]
ENVIRONMENT = "testing"
DATABASE_URL = "postgresql+asyncpg://soduser:devpassword123@localhost:5432/storyofdubai_test"
DATABASE_URL_SYNC = "postgresql://soduser:devpassword123@localhost:5432/storyofdubai_test"
REDIS_URL = "redis://localhost:6379/15"
SECRET_KEY = "test-secret-key-minimum-32-characters-long"

# ═══════════════════════════════════════════════════════════════════════════
# COVERAGE — Code Coverage
# ═══════════════════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════
# RUFF — Fast Linter
# ═══════════════════════════════════════════════════════════════════════════
[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
]
ignore = [
    "E501",  # Line too long (handled by black)
    "D100",  # Missing module docstring
    "D104",  # Missing package docstring
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "alembic",
    "__pycache__",
]

# ═══════════════════════════════════════════════════════════════════════════
# MYPY — Static Type Checking
# ═══════════════════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
]
ignore_missing_imports = true
